--- a/index.html
+++ b/index.html
@@ -2170,7 +2170,269 @@ window.addEventListener('DOMContentLoaded', () => {
   });
 });
 
+<script>
+(function() {
+  // --- CONFIGURATION ---
+  const battleCardPool = [
+    { src: "images/cards/the stranger card format.jpg", name: "The Stranger" },
+    { src: "images/cards/horny toad card format.jpg", name: "Horny Toad" },
+    { src: "images/cards/hypno toad card format.jpg", name: "Hypno Toad" },
+    { src: "images/cards/sumo toad card format.jpg", name: "Sumo Toad" },
+    { src: "images/cards/mad toad card format.jpg", name: "Mad Toad" }
+  ];
+  
+  const battleMaxHP = 80;
+  let battlePlayerHP = {};
+  let battleComputerHP = {};
+
+  // --- UTILITY ---
+  function shuffleArray(array) {
+    return array.sort(() => Math.random() - 0.5);
+  }
+
+  // --- CREATE BATTLEFIELD ---
+  function createBattlefield() {
+    let bf = document.querySelector('#battlefieldContainer');
+    if (!bf) {
+      bf = document.createElement('div');
+      bf.id = 'battlefieldContainer';
+      Object.assign(bf.style, {
+        position: 'fixed',
+        bottom: '80px',
+        left: '50%',
+        transform: 'translateX(-50%)',
+        display: 'flex',
+        gap: '10px',
+        zIndex: 10000
+      });
+      document.body.appendChild(bf);
+    }
+    bf.innerHTML = '';
+    return bf;
+  }
+
+  // --- CREATE CARD ELEMENT ---
+  function createBattleCard(card, isComputer=false) {
+    const el = document.createElement('div');
+    el.className = 'battle-system-card';
+    Object.assign(el.style, {
+      position: 'relative',
+      width: '80px',
+      height: '120px',
+      cursor: 'pointer',
+      display: 'inline-block',
+      opacity: isComputer ? 0.7 : 1,
+      transition: 'transform 0.2s'
+    });
+
+    const img = document.createElement('img');
+    img.src = card.src;
+    img.alt = card.name;
+    Object.assign(img.style, { width: '100%', height: '100%' });
+    el.appendChild(img);
+
+    const hpBar = document.createElement('div');
+    Object.assign(hpBar.style, {
+      position: 'absolute',
+      top: '2px',
+      left: '2px',
+      width: '76px',
+      height: '10px',
+      background: '#555'
+    });
+    el.appendChild(hpBar);
+
+    const hpFill = document.createElement('div');
+    Object.assign(hpFill.style, { width: '100%', height: '100%', background: 'red' });
+    hpBar.appendChild(hpFill);
+
+    const hpText = document.createElement('div');
+    Object.assign(hpText.style, {
+      position: 'absolute',
+      top: '14px',
+      left: '2px',
+      fontSize: '8px',
+      fontFamily: "'Press Start 2P','DotGothic16',monospace",
+      color: '#fff'
+    });
+    hpText.innerText = battleMaxHP;
+    el.appendChild(hpText);
+
+    el._hpText = hpText;
+    el._hpFill = hpFill;
+    el.dataset.name = card.name;
+
+    return el;
+  }
+
+  // --- UPDATE HP ---
+  function updateHP(cardName, owner) {
+    const el = document.querySelector(`.battle-system-card[data-name="${cardName}"]`);
+    if (!el) return;
+    el._hpText.innerText = owner[cardName];
+    el._hpFill.style.width = `${(owner[cardName] / battleMaxHP) * 100}%`;
+  }
+
+  // --- ATTACK / DEFEND ---
+  function performAttack(card) {
+    const targets = Object.keys(battleComputerHP);
+    if (!targets.length) return;
+    const target = targets[Math.floor(Math.random() * targets.length)];
+    battleComputerHP[target] -= 5;
+    if (battleComputerHP[target] < 0) battleComputerHP[target] = 0;
+    updateHP(target, battleComputerHP);
+    checkBattleEnd();
+  }
+
+  function performDefend(card) {
+    battlePlayerHP[card.name] += 5;
+    if (battlePlayerHP[card.name] > battleMaxHP) battlePlayerHP[card.name] = battleMaxHP;
+    updateHP(card.name, battlePlayerHP);
+  }
+
+  // --- ACTION CHOICES ---
+  function showActionChoices(cardEl, cardData) {
+    const existing = document.querySelector('#battleActionChoices');
+    if (existing) existing.remove();
+
+    const container = document.createElement('div');
+    container.id = 'battleActionChoices';
+    Object.assign(container.style, {
+      position: 'absolute',
+      bottom: '140px',
+      left: '50%',
+      transform: 'translateX(-50%)',
+      display: 'flex',
+      gap: '10px',
+      zIndex: 10001
+    });
+
+    const fightBtn = document.createElement('div');
+    fightBtn.innerText = 'FIGHT';
+    Object.assign(fightBtn.style, {
+      background: '#fff',
+      border: '2px solid #000',
+      padding: '5px',
+      cursor: 'pointer',
+      fontFamily: "'Press Start 2P','DotGothic16',monospace"
+    });
+    fightBtn.addEventListener('click', () => { performAttack(cardData); container.remove(); });
+
+    const defendBtn = document.createElement('div');
+    defendBtn.innerText = 'DEFEND';
+    Object.assign(defendBtn.style, {
+      background: '#fff',
+      border: '2px solid #000',
+      padding: '5px',
+      cursor: 'pointer',
+      fontFamily: "'Press Start 2P','DotGothic16',monospace"
+    });
+    defendBtn.addEventListener('click', () => { performDefend(cardData); container.remove(); });
+
+    container.appendChild(fightBtn);
+    container.appendChild(defendBtn);
+    document.body.appendChild(container);
+  }
+
+  // --- CHECK END ---
+  function checkBattleEnd() {
+    const playerAlive = Object.values(battlePlayerHP).some(h => h > 0);
+    const compAlive = Object.values(battleComputerHP).some(h => h > 0);
+    if (!playerAlive || !compAlive) {
+      alert(compAlive ? 'You lost!' : 'You won!');
+      document.querySelectorAll('.battle-system-card').forEach(c => c.remove());
+      document.querySelector('#battleActionChoices')?.remove();
+    }
+  }
+
+  // --- FIGHT OVERLAY ---
+  function showFightOverlay(callback) {
+    const overlay = document.createElement('div');
+    overlay.id = 'battleOverlay';
+    Object.assign(overlay.style, {
+      position: 'fixed',
+      top: 0,
+      left: 0,
+      width: '100%',
+      height: '100%',
+      background: 'rgba(0,0,0,0.5)',
+      display: 'flex',
+      alignItems: 'center',
+      justifyContent: 'center',
+      zIndex: 10002,
+      fontFamily: "'Press Start 2P','DotGothic16',monospace",
+      color: '#fff',
+      fontSize: '32px',
+      textTransform: 'uppercase'
+    });
+    overlay.innerText = 'FIGHT!';
+    document.body.appendChild(overlay);
+
+    setTimeout(() => {
+      overlay.remove();
+      if (callback) callback();
+    }, 1000);
+  }
+
+  // --- START FIGHT ---
+  function startFight() {
+    const collected = JSON.parse(localStorage.getItem('collectedCards')) || [];
+    if (collected.length < 2) return alert("Need at least 2 cards to fight!");
+
+    showFightOverlay(() => {
+      const shuffled = shuffleArray(collected);
+      const handCount = Math.min(collected.length, 5);
+      const playerHand = shuffled.slice(0, handCount);
+      const computerHand = shuffled.slice(handCount, handCount * 2);
+
+      playerHand.forEach(c => battlePlayerHP[c.name] = battleMaxHP);
+      computerHand.forEach(c => battleComputerHP[c.name] = battleMaxHP);
+
+      const battlefield = createBattlefield();
+
+      playerHand.forEach(c => {
+        const el = createBattleCard(c);
+        battlefield.appendChild(el);
+        el.addEventListener('click', () => showActionChoices(el, c));
+        el.addEventListener('mouseenter', () => el.style.transform='scale(1.1)');
+        el.addEventListener('mouseleave', () => el.style.transform='scale(1)');
+      });
+
+      computerHand.forEach(c => {
+        const el = createBattleCard(c, true);
+        battlefield.appendChild(el);
+      });
+    });
+  }
+
+  // --- ADD FIGHT BUTTON ---
+  function addFightButton() {
+    const btn = document.createElement('div');
+    btn.innerText = 'FIGHT';
+    btn.id = 'battleSystemFightBtn';
+    Object.assign(btn.style, {
+      position: 'fixed',
+      bottom: '20px',
+      left: '50%',
+      transform: 'translateX(-50%)',
+      padding: '10px 20px',
+      background: '#fff',
+      border: '2px solid #000',
+      fontFamily: "'Press Start 2P','DotGothic16',monospace",
+      fontSize: '12px',
+      cursor: 'pointer',
+      zIndex: 10001
+    });
+    btn.addEventListener('click', startFight);
+    document.body.appendChild(btn);
+  }
+
+  // --- INIT ---
+  window.addEventListener('DOMContentLoaded', addFightButton);
+
+})();
 </script>
+
     <!-- 🐸 Toad Wallet (bottom right) -->
 <div id="toadWallet" class="toad-wallet">
   <img id="walletImage" src="images/toad-wallet.png" alt="Toad Wallet">
